Modernize mdsal-dom-{api,spi}
Use various constructs available in JDK11/17.

Change-Id: I5c80b841c25ee5e695c8c643fe9fa43a2cede86b
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>